--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "next": "16.0.5",
     "postcss": "^8.5.6",
     "react": "19.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "19.2.0",
     "zod": "^4.1.13",
     "zustand": "^5.0.8"
