--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "19.2.0",
+    "react-hook-form": "^7.67.0",
     "zod": "^4.1.13",
     "zustand": "^5.0.8"
   },
