--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "19.2.0",
+    "react-highlight": "^0.15.0",
     "react-hook-form": "^7.67.0",
     "zod": "^4.1.13",
     "zustand": "^5.0.8"
@@ -24,6 +25,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-highlight": "^0.12.8",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^9",
     "eslint-config-next": "16.0.5",
     "tailwindcss": "^4.1.17",
